# Idaho

./: .env-sample  .gitignore  Cargo.toml  README.md
assets/: Idaho.ldtk  Typical_2D_platformer_example.ldtk
assets/logs/: prefix.log.2024-11-30-02  prefix.log.2024-11-30-05  prefix.log.2024-11-30-06
assets/pixelorama/: Idaho.pxo  alphabet.pxo  char_base.pxo  char_sheet.pxo  indicator_blink.pxo  main_char_sheet.pxo  other_char_sheet.pxo  william_hickman_sheet.pxo
assets/scripts/: william_hickman.xml
assets/timelines/: harry_rickard_init.xml
examples/field_instances/: mother.rs
logs/: prefix.log.2024-11-28-00  prefix.log.2024-11-28-05  prefix.log.2024-11-28-06  prefix.log.2024-11-28-07
src/: character.rs  colliders.rs  components.rs  game_flow.rs  main.rs  menu.rs  misc_objects.rs  player.rs  systems.rs  timeline.rs  walls.rs
src/assets/: main_game.d.ts  main_game.js  main_game_bg.wasm.d.ts
