[package]
name = "idaho"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["macros"]

[dependencies]
bevy_ecs_ldtk = { version = "0.10.0" }
bevy_ecs_ldtk_macros = { version = "0.10.0", optional = true, path = "macros" }
bevy_ecs_tilemap = { version = "0.14", default-features = false }
bevy_rapier2d = "0.21"
bevy = { version = "0.14", default-features = false, features = ["bevy_sprite", "png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"
paste = "1.0"

[dev-dependencies]
bevy = "0.14"
bevy_rapier2d = "0.21"
rand = "0.8"
bevy-inspector-egui = "0.18"

[features]
default = ["derive", "render"]
derive = ["bevy_ecs_ldtk_macros"]
atlas = ["bevy_ecs_tilemap/atlas"]
render = ["bevy_ecs_tilemap/render"]

[[example]]
name = "platformer"
path = "examples/platformer/main.rs"

[[example]]
name = "field_instances"
path = "examples/field_instances/main.rs"

[[example]]
name = "main_game"
path = "src/main.rs"
