[package]
name = "idaho"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["macros"]

[dependencies]
bevy_ecs_ldtk = {version = "0.10.0", features = ["derive", "atlas"]}
bevy_ecs_ldtk_macros = { version = "0.10.0", optional = true, path = "macros" }
bevy_ecs_tilemap = { version = "0.14.0", default-features = false}  
bevy = { version = "0.14.2", features = ["bevy_sprite", "png",] }
derive-getters = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
thiserror = "1.0"
tracing = { version = "0.1.40" }
tracing-appender = { version = "0.2.3" }
tracing-log = { version = "0.2.0" }
tracing-subscriber = { version = "0.3.18", features = ["ansi", "fmt"] }
paste = "1.0"
derive_more = "0.99.17"
path-clean = "1.0.1"
bevy_rapier2d = "0.27.0"
fake = { version = "2.8.0", features = ["uuid"] }
rand = "0.8"
bevy-inspector-egui = "0.25" 

#[dev-dependencies]
#bevy = "0.14"
#bevy_rapier2d = "0.27.0"
#fake = { version = "2.8.0", features = ["uuid"] }
#rand = "0.8"
#bevy-inspector-egui = "0.25" 

[features]
default = ["derive", "render", "internal_levels"]
derive = ["bevy_ecs_ldtk_macros"]
atlas = ["bevy_ecs_tilemap/atlas"]
render = ["bevy_ecs_tilemap/render"]
internal_levels = []
external_levels = []

[package.metadata.docs.rs]
all-features = true
